force-app/main/default/objects/Code_Reference__c/Code_Reference__c.object-meta.xml
<CustomObject>
    <description>Reference/config table of coded values (ICD-10, CPT, LOINC, RxNorm, SNOMED, CVX) used for fast code lookup. Not a clinical data object.</description>
    <label>Code Reference</label>
    <nameField>
        <label>Code Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code References</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>