force-app/main/default/objects/Code_Reference__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Code value from the selected system. External ID for indexed lookup. Not unique — the same code may exist in more than one system.</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>