force-app/main/default/objects/Code_Reference__c/fields/Code_System__c.field-meta.xml
<CustomField>
    <fullName>Code_System__c</fullName>
    <description>Terminology system for this code. Restricted to the LogicEMR_Code_System global value set.</description>
    <label>Code System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>