force-app/main/default/objects/Code_Reference__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <description>Human-readable display text for the code.</description>
    <label>Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>