force-app/main/default/objects/Code_Reference__c/listViews/Active_Codes.listView-meta.xml
<ListView>
    <fullName>Active_Codes</fullName>
    <columns>NAME</columns>
    <columns>Code_System__c</columns>
    <columns>Code__c</columns>
    <columns>Display__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Codes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>