force-app/main/default/objects/Code_Reference__c/listViews/All_Codes.listView-meta.xml
<ListView>
    <fullName>All_Codes</fullName>
    <columns>NAME</columns>
    <columns>Code_System__c</columns>
    <columns>Code__c</columns>
    <columns>Display__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Codes</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>